--- a/src/App.css
+++ b/src/App.css
@@ -160,31 +160,135 @@ body {
   margin: 0;
 }
 
-/* MY APP STYLES */
-
-/* main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
-
-form {
-  width: 300px;
-  background-color: lightgrey;
-  border-radius: 5px;
-  border: 1px solid darkgrey;
+ul {
+  list-style: none;
 }
+
+a,
+a:visited {
+  text-decoration: none;
+  color: #265bdb;
+}
+
+/* =============================================
+APP STYLES
+============================================= */
+
+.centerXY {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bg-light {
+  background-color: #fafbfc;
+}
+
+.bg-dark {
+  background-color: #24292e;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* ------------  UTILS  ------------ */
+
+button {
+  border-radius: 3px;
+  padding: 5px;
+  color: #24292e;
+  cursor: pointer;
+}
+
+button.primary {
+  background-color: #28a745;
+  border: 1px solid #28a745;
+  background-image: linear-gradient(-180deg, #34d058, #28a745 90%);
+  color: #fff;
+}
+
+button.primary:hover {
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+button.secondary {
+  border: 1px solid lightgrey;
+  background-color: lightgrey;
+  width: 80%;
+  margin: 10px auto;
+}
+
+/* ------------  MAIN  ------------ */
+
+header {
+  color: hsla(0, 0%, 100%, 0.9);
+  width: 100%;
+  padding: 25px;
+}
+
+footer {
+  display: none;
+  color: hsla(0, 0%, 100%, 0.9);
+  width: 100%;
+  /* position: absolute;
+  bottom: 0; */
+  padding: 10px;
+}
+
+body {
+  background: url("https://github.githubassets.com/images/modules/site/heroes/simple-codelines.svg"),
+    #2b3137;
+  background-position: center;
+  background-size: contain;
+  color: hsla(0, 0%, 100%, 0.6);
+}
+
+main {
+  padding: 50px;
+}
+
+/* ------------  LOGIN PAGE  ------------ */
+
+.login {
+  width: 350px;
+  flex-direction: column;
+  color: #24292e;
+  padding: 7% 5%;
+  margin: 0 auto;
+}
+label {
+  text-align: center;
+}
+
+.login button,
+.login input {
+  margin: 5px;
+  width: 90%;
+}
+
+/* ------------  USER PROFILE ------------ */
+
+.userProfile {
+  margin: 0 auto;
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  color: #24292e;
+}
+
+/* ------------  USER DETAILS  ------------ */
 
 .userDetails {
   border: 1px solid black;
   border-radius: 5px;
-  background-color: papayawhip;
-  width: 25%;
-  margin-left: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 15px;
+  align-self: flex-start;
+  width: 30%;
 }
 
 .userDetails p {
@@ -193,15 +297,67 @@ form {
 
 .avatar {
   border-radius: 50%;
-  width: 200px;
-  margin-right: 30px;
+  width: 70%;
 }
 
-.userProfile {
-  display: flex;
-  flex-wrap: wrap;
+/* ------------  USER EVENTS  ------------ */
+
+.userEvents {
+  width: 70%;
 }
 
-.userHistory {
-  width: 60%;
+.event_heading {
+  color: lightGrey;
+}
+
+.event_default_message {
+  width: 100%;
+  color: lightGrey;
+  text-align: center;
+}
+
+.event_container {
+  text-align: center;
+}
+
+.event_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: repeat(70px);
+  grid-gap: 10px;
+}
+
+.event_item {
+  padding: 10px;
+  text-align: left;
+}
+
+.pr_status_container {
+  margin-top: 5px;
+}
+
+span.closed,
+span.open,
+span.merged {
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 3px;
+  padding: 5px;
+  margin: 5px;
+}
+
+span.merged {
+  border-color: darkorange;
+  color: darkorange;
+}
+
+span.closed {
+  color: red;
+  border-color: red;
+}
+
+span.open {
+  color: green;
+  border-color: green;
 }
