--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@ a:hover {
 
 button {
   border-radius: 3px;
-  padding: 5px;
+  padding: 7px;
   color: #24292e;
   cursor: pointer;
 }
@@ -223,17 +223,18 @@ button.secondary {
 /* ------------  MAIN  ------------ */
 
 header {
+  font-size: 20px;
   color: hsla(0, 0%, 100%, 0.9);
   width: 100%;
   padding: 25px;
 }
 
 footer {
-  display: none;
+  /* display: none; */
   color: hsla(0, 0%, 100%, 0.9);
   width: 100%;
-  /* position: absolute;
-  bottom: 0; */
+  position: relative;
+  bottom: 0;
   padding: 10px;
 }
 
@@ -246,7 +247,8 @@ body {
 }
 
 main {
-  padding: 50px;
+  padding: 100px;
+  min-height: calc(100vh - 115px);
 }
 
 /* ------------  LOGIN PAGE  ------------ */
@@ -296,6 +298,7 @@ label {
 }
 
 .avatar {
+  margin-top: 10px;
   border-radius: 50%;
   width: 70%;
 }
@@ -307,6 +310,7 @@ label {
 }
 
 .event_heading {
+  margin: 35px 0;
   color: lightGrey;
 }
 
@@ -316,8 +320,25 @@ label {
   text-align: center;
 }
 
+.event_item {
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  text-align: left;
+}
+
+.event_icon {
+  width: 50px;
+}
+
 .event_container {
   text-align: center;
+}
+
+.event_info {
+  width: 75%;
+  margin-left: auto;
 }
 
 .event_grid {
@@ -327,13 +348,10 @@ label {
   grid-gap: 10px;
 }
 
-.event_item {
-  padding: 10px;
-  text-align: left;
-}
-
 .pr_status_container {
-  margin-top: 5px;
+  margin-top: 15px;
+  margin-right: 15px;
+  text-align: right;
 }
 
 span.closed,
